# very-good

./: .gitmodules  Cargo.toml  NOTICE-GPL  README.md
vg-core/: Cargo.toml
vg-core/benches/: bench_1.rs  bench_2.rs  bench_3.rs  bench_4.rs  bench_5.rs  block_1.rs  block_2.rs  block_3.rs  block_4.rs  block_5.rs  block_6.rs  block_7.rs  comment_1.rs  escape_1.rs  extends_1.rs  extends_2.rs  extends_3.rs  for_1.rs  for_2.rs  for_3.rs  for_4.rs  for_5.rs  for_6.rs  for_7.rs  for_8_name.rs  for_8_name_default.rs  for_8_name_reverse.rs  full_1_home.rs  full_1_home_trim.rs  full_1_items.rs  full_2_page.rs  full_3_page.rs  if_1.rs  if_10.rs  if_11.rs  if_12.rs  if_2.rs  if_3.rs  if_4.rs  if_5.rs  (+22 more)
vg-core/src/: lib.rs  test.rs
vg-core/test/block/1/: against.jinja  template.jinja
vg-core/test/block/2/: template.jinja
vg-core/test/block/3/: against.jinja  template.jinja
vg-core/test/block/4/: template.jinja
vg-core/test/block/5/: against.jinja  template.jinja
vg-core/test/block/6/: against.jinja  template.jinja
vg-core/test/block/7/: template.jinja
vg-core/test/comment/1/: against.jinja  template.jinja
vg-core/test/escape/1/: against.jinja  template.jinja
vg-core/test/extends/1/: fragment.jinja
vg-core/test/extends/2/: against.jinja  fragment.jinja
vg-core/test/extends/3/: fragment.jinja  sub_fragment.jinja  template.jinja
vg-core/test/extends/5/: against.jinja  page.jinja
vg-core/test/for/1/: against.jinja  template.jinja
vg-core/test/for/2/: against.jinja  template.jinja
vg-core/test/for/4/: against.jinja  template.jinja
vg-core/test/for/5/: template.jinja
vg-core/test/for/6/: against.jinja  template.jinja
vg-core/test/for/7/: template.jinja
vg-core/test/for/8/: against.jinja  against_reverse.jinja  by_created.jinja  by_created_reverse.jinja  by_modified.jinja  by_modified_reverse.jinja  by_name.jinja  by_name_default.jinja  by_name_reverse.jinja
vg-core/test/full/1/: against_home.jinja  against_home_trim.jinja  against_items.jinja  home.jinja  home_trim.jinja  items.jinja  page.jinja  page_trim.jinja  template.jinja
vg-core/test/full/2/: against.jinja  page.jinja
vg-core/test/full/3/: against.jinja
vg-core/test/if/1/: template.jinja
vg-core/test/if/10/: against.jinja  template.jinja
vg-core/test/if/11/: template.jinja
vg-core/test/if/12/: template.jinja
vg-core/test/if/2/: template.jinja
vg-core/test/if/3/: against.jinja  template.jinja
vg-core/test/if/4/: template.jinja
vg-core/test/if/5/: against.jinja  template.jinja
vg-core/test/if/6/: against.jinja  template.jinja
vg-core/test/if/7/: template.jinja
vg-core/test/if/8/: template.jinja
vg-core/test/if/9/: template.jinja
vg-core/test/ignore/1/: template.jinja
vg-core/test/ignore/2/: include.jinja  template.jinja
vg-core/test/ignore/3/: template.jinja
vg-core/test/include/1/: against.jinja  template.jinja
vg-core/test/include/10/: against.html  page.jinja
vg-core/test/include/11/: against.html  include.md
vg-core/test/include/12/: template.jinja
vg-core/test/include/13/: against.html  include.md  template.jinja
vg-core/test/include/14/: against.html  description.txt  include.md  object.jinja  template.jinja
vg-core/test/include/2/: include.jinja  template.jinja
vg-core/test/include/3/: against.jinja  template.jinja
vg-core/test/include/4/: include.jinja  (+1 more)
(+34 files in other folders)
