[package]
name = "vg-core"
version = "1.0.1"
edition = "2021"
description = "Very Good Templating Engine Core"

[dev-dependencies.criterion]
version = "0.4"

[[bench]]
name = "bench_1"
harness = false

[[bench]]
name = "bench_2"
harness = false

[[bench]]
name = "bench_3"
harness = false

[[bench]]
name = "bench_4"
harness = false

[[bench]]
name = "bench_5"
harness = false

[dependencies.nfm-core]
path = "../lib/nfm/nfm-core"
